@@ -3,6 +3,7 @@ meegotouchhome (1.1.5~1) unstable; urgency=low
   * [UNRELEASED]
   * Fixes: NB#259022 - Duplicated application icons in main menu
   * Fixes: NB#260410 - Invalid desktop entry will be added to Launcher if it has entry in /usr/share/applications/installer-extra/ folder
+  * Fixes: NB#274768 - Installation progress isn't visible in launcher for applications installed from Ovi Store
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 22 Jul 2011 11:59:14 +0300
 
